# archimedes-agent

./: .gitignore  AGENTS.md  DESIGN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: desktop-release.yml  windows-build.yml
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DEVELOPMENT.md  OPEN_SOURCE_ATTRIBUTIONS.md  OS_OPEN_AND_CLI.md  RELEASES.md  TROUBLESHOOTING.md  USAGE.md
docs/plans/: BUILD_WINDOWS.md  archimedes-vscode-inspired-ui.md  chatgpt-pro-codex-subscriptions.md  issue-9-10-os-open-cli-windows-console.md
plans/: issue-23-settings-workspace-tab.md  workspace-tabs-ux-fixes.md
scripts/: install.ps1  install.sh  prepare-release-version.mjs  sync-logos.sh
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: codex.rs  lib.rs  main.rs
src-tauri/src/workspace/: mod.rs  platform.rs  provider.rs
src-tauri/windows/: nsis-hooks.nsh
src/app/: constants.ts  router.tsx
src/components/: AppTooltip.module.css  AppTooltip.tsx  AssistantPanel.tsx  CustomSelect.module.css  CustomSelect.tsx  DiagramCanvas.tsx
src/components/diagram/: DiagramCanvas.tsx
src/components/ui/: AppDialog.css  AppDialog.tsx  AssistantHeader.module.css  icons.tsx  (+3 more)
src/hooks/: useChatGptSubscriptionAuth.ts  useCodexAuth.ts  useLlmReviewContext.ts  useModelSelection.ts  useProviderSettings.ts
src/lib/: chatgptSubscriptionSettings.ts  openExternalUrl.ts  settingsValidation.ts  storage.ts  theme.test.ts  theme.ts
(+72 files in other folders)
