[package]
name = "archimedes-agent"
version = "0.1.0"
description = "Local Excalidraw + architecture brainstorming desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "gemma_diagram_brainstormer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-dialog = { version = "2", default-features = false, features = ["xdg-portal"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
